<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_bar"
        android:background="@color/black_background"
        android:fitsSystemWindows="true"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black_background"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/cart_tob_bar"
                    android:textColor="@color/grey_soft"
                    android:textSize="@dimen/text_size_big"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btn_clear_cart"
                    android:layout_width="@dimen/width_ic_trash"
                    android:layout_height="@dimen/height_ic_trash"
                    android:layout_marginEnd="@dimen/margin_s"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_trash" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_summary_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_l"
                android:fontFamily="@font/inter_medium"
                android:text="@string/cart_summary"
                android:textColor="@color/grey_light"
                android:textSize="@dimen/text_size_general"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_items"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_l"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_summary_cart"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                tools:listitem="@layout/item_product_cart" />

            <TextView
                android:id="@+id/text_special_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_xxx"
                android:text="@string/cart_text_special_instructions"
                android:textColor="@color/grey_light"
                android:textSize="@dimen/text_size_general"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_items" />

            <EditText
                android:id="@+id/edit_text_cart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_s_plus"
                android:background="@drawable/bg_rounded_edit_text_cart"
                android:fontFamily="@font/inter_regular"
                android:gravity="top|start"
                android:hint="@string/cart_text_hint_instructions"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:minHeight="@dimen/edit_text_cart_min_height"
                android:padding="@dimen/padding_s"
                android:textColor="@color/blue_dark_hint"
                android:textSize="@dimen/text_size_general"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_special_instructions" />

            <FrameLayout
                android:id="@+id/frame_divider"
                android:layout_width="0dp"
                android:layout_height="@dimen/height_divider"
                android:layout_marginStart="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_l"
                android:layout_marginEnd="@dimen/margin_s"
                android:background="@color/grey_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_text_cart" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_info_total"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_xl"
                android:layout_marginEnd="@dimen/margin_s"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_divider">

                <TextView
                    android:id="@+id/text_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/cart_text_subtotal"
                    android:textColor="@color/grey_light"
                    android:textSize="@dimen/text_size_general"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_value_subtotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/grey_light"
                    android:textSize="@dimen/text_size_general"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="$ 159,96" />

                <TextView
                    android:id="@+id/text_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_s_plus"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/cart_text_shipping"
                    android:textColor="@color/grey_light"
                    android:textSize="@dimen/text_size_general"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_subtotal" />

                <TextView
                    android:id="@+id/text_value_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_s_plus"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/cart_text_value_shipping"
                    android:textColor="@color/green"
                    android:textSize="@dimen/text_size_general"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_value_subtotal" />

                <TextView
                    android:id="@+id/text_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_m"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/cart_text_total"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_general_plus"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_shipping" />

                <TextView
                    android:id="@+id/text_value_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_m"
                    android:fontFamily="@font/inter_bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_general_plus"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_value_shipping"
                    tools:text="$ 159,96" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_card_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_s"
                android:layout_marginTop="@dimen/margin_xl"
                android:layout_marginBottom="@dimen/margin_xs"
                android:backgroundTint="@color/orange_primary"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/cart_text_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_general_plus"
                android:textStyle="bold"
                app:cornerRadius="@dimen/corner_radius_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_info_total" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>