<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_xxxl"
        android:text="@string/home_title"
        android:textSize="@dimen/text_size_home_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_home_search_and_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_s"
        android:layout_marginBottom="@dimen/margin_m"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home_title">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_home_search"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_s"
            android:layout_weight="1"
            app:boxBackgroundColor="@color/grey_dark_button_background"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_home_search_text_input_layout"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_home_search_text_input_layout"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_home_search_text_input_layout"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_home_search_text_input_layout"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_home_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/common_search_hint"
                android:paddingHorizontal="@dimen/padding_m"
                android:paddingVertical="@dimen/padding_s"
                android:textColor="@color/white"
                android:textColorHint="@color/grey_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/button_home_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_filter" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_filters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_s"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_home_search_and_filter"
        tools:visibility="visible">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true" />

        </HorizontalScrollView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_m"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_filters"
        tools:itemCount="50"
        tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        tools:listitem="@layout/item_gallery"
        tools:spanCount="2" />

    <ProgressBar
        android:id="@+id/progress_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_filters"
        tools:visibility="visible">

        <TextView
            android:id="@+id/text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_generic_oops"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_big"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_m"
            android:text="@string/button_retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_error" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>